@@ -27,6 +27,7 @@ static const NamingScheme naming_schemes[] = {
         { "v252", NAMING_V252 },
         { "v253", NAMING_V253 },
         { "v254", NAMING_V254 },
+        { "v255", NAMING_V255 },
         /* … add more schemes here, as the logic to name devices is updated … */
 
         EXTRA_NET_NAMING_MAP
